--- a/stylesheets/work.scss
+++ b/stylesheets/work.scss
@@ -64,7 +64,7 @@
     background-image:url(../images/projects/sculpture.JPG);
     }
     &:nth-child(2n){
-    background-image:url(../images/projects/view.JPG);
+    background-image:url(../images/projects/buildings.JPG);
     }
     &:nth-child(3n){
     background-image:url(../images/projects/dino.JPG);
