--- a/stylesheets/general.scss
+++ b/stylesheets/general.scss
@@ -32,13 +32,13 @@ h1 {
     @include flexbox;
     flex-direction: column;
     justify-content:center;
-    background: rgba(255, 51, 51, 1);
-    background: -moz-linear-gradient(left, rgba(255, 51, 51, 1) 23%, rgba(248, 43, 20, 1) 45%, rgba(246, 41, 12, 1) 51%, rgba(219, 15, 37, 1) 82%, rgba(204, 0, 51, 1) 100%);
-    background: -webkit-gradient(left top, right top, color-stop(23%, rgba(255, 51, 51, 1)), color-stop(45%, rgba(248, 43, 20, 1)), color-stop(51%, rgba(246, 41, 12, 1)), color-stop(82%, rgba(219, 15, 37, 1)), color-stop(100%, rgba(204, 0, 51, 1)));
-    background: -webkit-linear-gradient(left, rgba(255, 51, 51, 1) 23%, rgba(248, 43, 20, 1) 45%, rgba(246, 41, 12, 1) 51%, rgba(219, 15, 37, 1) 82%, rgba(204, 0, 51, 1) 100%);
-    background: -o-linear-gradient(left, rgba(255, 51, 51, 1) 23%, rgba(248, 43, 20, 1) 45%, rgba(246, 41, 12, 1) 51%, rgba(219, 15, 37, 1) 82%, rgba(204, 0, 51, 1) 100%);
-    background: -ms-linear-gradient(left, rgba(255, 51, 51, 1) 23%, rgba(248, 43, 20, 1) 45%, rgba(246, 41, 12, 1) 51%, rgba(219, 15, 37, 1) 82%, rgba(204, 0, 51, 1) 100%);
-    background: linear-gradient(to right, rgba(255, 51, 51, 1) 23%, rgba(248, 43, 20, 1) 45%, rgba(246, 41, 12, 1) 51%, rgba(219, 15, 37, 1) 82%, rgba(204, 0, 51, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3333', endColorstr='#cc0033', GradientType=1);}
+    background: rgba(255,95,108,1);
+background: -moz-linear-gradient(left, rgba(255,95,108,1) 25%, rgba(255,134,110,1) 54%, rgba(255,196,113,1) 100%);
+background: -webkit-gradient(left top, right top, color-stop(25%, rgba(255,95,108,1)), color-stop(54%, rgba(255,134,110,1)), color-stop(100%, rgba(255,196,113,1)));
+background: -webkit-linear-gradient(left, rgba(255,95,108,1) 25%, rgba(255,134,110,1) 54%, rgba(255,196,113,1) 100%);
+background: -o-linear-gradient(left, rgba(255,95,108,1) 25%, rgba(255,134,110,1) 54%, rgba(255,196,113,1) 100%);
+background: -ms-linear-gradient(left, rgba(255,95,108,1) 25%, rgba(255,134,110,1) 54%, rgba(255,196,113,1) 100%);
+background: linear-gradient(to right, rgba(255,95,108,1) 25%, rgba(255,134,110,1) 54%, rgba(255,196,113,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5f6c', endColorstr='#ffc471', GradientType=1 );}
 
 
