--- a/stylesheets/utilities.scss
+++ b/stylesheets/utilities.scss
@@ -9,7 +9,7 @@ $Gray: #4E4E50;
 $DarkBlue:#1F2833;
 $Pink:#993366;
 $LightBlue:#E3E2DF;
-$Red: #ff3333;
+$Red: #ff5f6c;
 $Orange:#F9521C;
 $Yellow:#fedf3d;
 $Blue:#66cccc;
